all good but it sends data on the order admin page and creating a order. now changes is send it to the checkout page . and make the price variations

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <ul class="flex border-b border-gray-700">
                 <li class="mr-4">
                     <button id="legalTab"
-                        class="tab-button px-4 py-2 text-white font-medium border-b-2 border-yellow-400">Legal
+                        class="tab-button px-4 py-2 text-white font-medium border-b-2 border-yellow-400 tab">Legal
                         Plates</button>
                 </li>
                 <li>
-                    <button id="customTab" class="tab-button px-4 py-2 text-white-400 border-yellow-400">Custom
+                    <button id="customTab" class="tab-button px-4 py-2 text-white-400 border-yellow-400 tab">Custom
                         Plates</button>
                 </li>
             </ul>
